hw24 add test