@@ -10,14 +10,11 @@ import ru.otus.spring.hw24.dto.AuthorDto;
 import ru.otus.spring.hw24.dto.BookDto;
 import ru.otus.spring.hw24.services.BookService;
 
-import javax.annotation.security.RolesAllowed;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @FieldDefaults(makeFinal = true, level = AccessLevel.PRIVATE)
 @RequiredArgsConstructor
-@RolesAllowed("ROLE_USER")
 @RequestMapping("/books")
 public class BooksController {
 
@@ -37,7 +34,6 @@ public class BooksController {
         return "createBook";
     }
 
-    @RolesAllowed("ROLE_ADMIN")
     @GetMapping(value = "/edit{id}")
     public String editBookPage(@PathVariable("id") String id, Model model) {
         BookDto bookDto = bookService.findById(id);
@@ -47,22 +43,23 @@ public class BooksController {
 
     @PostMapping(value = "/save")
     public String saveBooks(@ModelAttribute BookDto bookDto, Model model) {
-        BookDto foundBook = bookService.findById(bookDto.getId());
-        if (foundBook.getAuthorDtoList() != null) {
-            List<AuthorDto> newAuthors = bookDto.getAuthorDtoList()
-                    .stream()
-                    .filter(authorDto -> authorDto.getId() == null)
-                    .collect(Collectors.toList());
-            foundBook.getAuthorDtoList().addAll(newAuthors);
-        } else {
-            foundBook.setAuthorDtoList(bookDto.getAuthorDtoList());
-        }
-        if (bookDto.getCommentDtoList().isEmpty() && !foundBook.getCommentDtoList().isEmpty()) {
-            bookDto.setCommentDtoList(foundBook.getCommentDtoList());
+        if (bookDto.getId() != null) {
+            BookDto foundBook = bookService.findById(bookDto.getId());
+            if (foundBook.getAuthorDtoList() != null) {
+                List<AuthorDto> newAuthors = bookDto.getAuthorDtoList()
+                        .stream()
+                        .filter(authorDto -> authorDto.getId() == null)
+                        .toList();
+                foundBook.getAuthorDtoList().addAll(newAuthors);
+            } else {
+                foundBook.setAuthorDtoList(bookDto.getAuthorDtoList());
+            }
+            if (bookDto.getCommentDtoList().isEmpty() && !foundBook.getCommentDtoList().isEmpty()) {
+                bookDto.setCommentDtoList(foundBook.getCommentDtoList());
+            }
         }
         bookService.save(bookDto);
         model.addAttribute("books", bookService.findAll());
         return "redirect:/books";
     }
-
 }
